# Doc-Chat

./: .env-sample  .gitignore  .pre-commit-config.yaml  DocChat_backend.py  README.md  app.py  crawling_pipeline.py  doc_chat_backend.py  hello.py  pipeline.py  pyproject.toml
DocCrawl/: scrapy.cfg
DocCrawl/DocCrawl/: items.py  middlewares.py  pipelines.py  settings.py
DocCrawl/DocCrawl/spiders/: document_spider.py
VectorDB/: .env-sample  create_vector_store.py
scrape_pipeline/: scraper.py  url_validator.py
scraped_files/: urls.csv
vector_db/: create_vector_store.py
