[project]
name = "Doc-Chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "tiktoken",
    "html2text",
    "openai>=1.64.0",
    "scrapy",
    "langchain",
    "langchain-community",
    "chromadb",
    "gradio",
    "streamlit",
    "langchain-text-splitters",
    "pre-commit",
]
